// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreCard should match snapshot if big 1`] = `
<div
  className="styled__Cont-u4l7vz-0 bMPxxb"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="styled__CoverCont-u4l7vz-1 fBvDPs"
  />
  <div
    className="styled__BottomCont-u4l7vz-2 hNOyHF"
  >
    <div
      className="styled__ContentCont-u4l7vz-3 bdQxDT"
    >
      <div
        className="styled__AvatarCont-u4l7vz-5 eYWUTz"
      />
      <div
        className="styled__ContentLeftCont-u4l7vz-6 jCtWhL"
      >
        <div
          className="styled__MainInfoCont-u4l7vz-14 cZJaIi"
        >
          <div
            className="styled__StoreNameCont-u4l7vz-15 fGcZKw"
          >
            Armonie
          </div>
          <div
            className="styled__LocationCont-u4l7vz-16 csMjxv"
          >
            Lviv
          </div>
        </div>
        <div
          className="styled__DescriptionCont-u4l7vz-17 enhRkL"
        >
          Scented candles from natural soy wax. Perfumed with the best essential oils. Fill your home with a cozy aroma from Armonie.
        </div>
      </div>
      <div
        className="styled__ContentRightCont-u4l7vz-7 dUTDbJ"
      >
        <div
          className="styled__GoodsCountCont-u4l7vz-8 kvBvtF"
        >
          <span
            className="styled__GoodsCountWrapper-u4l7vz-10 uyNoP"
          >
            <span
              className="styled__GoodsCount-u4l7vz-11 ZctaY"
            >
              435
            </span>
            <span>
              goods
            </span>
          </span>
        </div>
        <div
          className="styled__RatingCont-u4l7vz-9 hSOekt"
        >
          <span
            className="styled__RatingWrapper-u4l7vz-12 crubSX"
          >
            <span
              className="emoji-mart-emoji"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title={null}
            >
              <span
                style={
                  Object {
                    "backgroundImage": "url(https://unpkg.com/emoji-datasource-apple@4.0.4/img/apple/sheets-256/64.png)",
                    "backgroundPosition": "47.05882352941176% 100%",
                    "backgroundSize": "5200% 5200%",
                    "display": "inline-block",
                    "height": 24,
                    "width": 24,
                  }
                }
              />
            </span>
            <span
              className="styled__Rating-u4l7vz-13 dVlFqb"
            >
              4.8
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      className="styled__BannerCont-u4l7vz-4 kgRFyb"
    />
  </div>
</div>
`;

exports[`StoreCard should match snapshot if small 1`] = `
<div
  className="styled__Cont-u4l7vz-0 bMPxxb"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="styled__CoverCont-u4l7vz-1 cuuDJh"
  />
  <div
    className="styled__BottomCont-u4l7vz-2 hNOyHF"
  >
    <div
      className="styled__ContentCont-u4l7vz-3 bdQxDT"
    >
      <div
        className="styled__AvatarCont-u4l7vz-5 idLEVQ"
      />
      <div
        className="styled__ContentLeftCont-u4l7vz-6 jLEZTa"
      >
        <div
          className="styled__MainInfoCont-u4l7vz-14 bdRQkT"
        >
          <div
            className="styled__StoreNameCont-u4l7vz-15 fGcZKw"
          >
            Armonie
          </div>
          <div
            className="styled__LocationCont-u4l7vz-16 csMjxv"
          >
            Lviv
          </div>
        </div>
        <div
          className="styled__DescriptionCont-u4l7vz-17 enhRkL"
        >
          Scented candles from natural soy wax. Perfumed with the best essential oils. Fill your home with a cozy aroma from Armonie.
        </div>
      </div>
      <div
        className="styled__ContentRightCont-u4l7vz-7 dUTDbJ"
      >
        <div
          className="styled__GoodsCountCont-u4l7vz-8 kvBvtF"
        >
          <span
            className="styled__GoodsCountWrapper-u4l7vz-10 uyNoP"
          >
            <span
              className="styled__GoodsCount-u4l7vz-11 ZctaY"
            >
              435
            </span>
            <span>
              goods
            </span>
          </span>
        </div>
        <div
          className="styled__RatingCont-u4l7vz-9 hSOekt"
        >
          <span
            className="styled__RatingWrapper-u4l7vz-12 crubSX"
          >
            <span
              className="emoji-mart-emoji"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title={null}
            >
              <span
                style={
                  Object {
                    "backgroundImage": "url(https://unpkg.com/emoji-datasource-apple@4.0.4/img/apple/sheets-256/64.png)",
                    "backgroundPosition": "47.05882352941176% 100%",
                    "backgroundSize": "5200% 5200%",
                    "display": "inline-block",
                    "height": 24,
                    "width": 24,
                  }
                }
              />
            </span>
            <span
              className="styled__Rating-u4l7vz-13 dVlFqb"
            >
              4.8
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
